# gotagthem

./: BUILD.bazel  README.md  WORKSPACE  deps.bzl  go.mod  go.sum
dsl/: BUILD.bazel  expression.go  expression_test.go  parser.go  parser_test.go  scanner.go  scanner_test.go
example/: BUILD.bazel  gofindthemtagger.go  main.go
example/tagger/: BUILD.bazel
finder/: BUILD.bazel  extractorHandlers.go  finder.go  floatextractor.go  intextractors.go  models.go  stringextractors.go
tagger/: BUILD.bazel  extractors.go  internal.go  internal_test.go  tagger.go  tagger_test.go
