load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "finder",
    srcs = [
        "extractors.go",
        "internal.go",
        "labeller.go",
    ],
    importpath = "github.com/pedroegsilva/gotagthem/finder",
    visibility = ["//visibility:public"],
    deps = [
        "//dsl",
        "@com_github_pedroegsilva_gofindthem//finder",
    ],
)

go_library(
    name = "labeller",
    srcs = [
        "extractors.go",
        "internal.go",
        "labeller.go",
    ],
    importpath = "github.com/pedroegsilva/gotagthem/labeller",
    visibility = ["//visibility:public"],
    deps = [
        "//dsl",
        "@com_github_pedroegsilva_gofindthem//finder",
    ],
)

go_library(
    name = "tagger",
    srcs = [
        "extractors.go",
        "internal.go",
        "tagger.go",
    ],
    importpath = "github.com/pedroegsilva/gotagthem/tagger",
    visibility = ["//visibility:public"],
    deps = [
        "//dsl",
        "@com_github_pedroegsilva_gofindthem//finder",
    ],
)
